--- a/GeoMastery.BlazorWASM/Shared/NavMenu.razor
+++ b/GeoMastery.BlazorWASM/Shared/NavMenu.razor
@@ -15,7 +15,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="">
+            <NavLink class="nav-link" href="capitals">
                 <span class="oi oi-home" aria-hidden="true"></span> Capitals
             </NavLink>
         </div>
