add capital json file, adjust viewmodel params

--- a/GeoMastery.BlazorWASM/Pages/Capitals.razor
+++ b/GeoMastery.BlazorWASM/Pages/Capitals.razor
@@ -9,7 +9,7 @@
 <h3>Capitals</h3>
 @foreach(CapitalViewModel capital in capitals)
 {
-    <p>@capital.Name</p>
+    <p>@capital.Country - @capital.Capital</p>
 }
 
 @code {
