--- a/GeoMastery.BlazorWASM/Shared/CountryFlagCard/CountryFlagCard.razor
+++ b/GeoMastery.BlazorWASM/Shared/CountryFlagCard/CountryFlagCard.razor
@@ -1,8 +1,10 @@
 ﻿@using System.Text.RegularExpressions;
 
-<div class="country">
-    <h3>@CardViewModel.Country</h3>
-    <img src="@($"data:image/png;base64,{CardViewModel.FlagBase64}")" alt="@CardViewModel.Country flag" />
+<div class="card">
+    <div class="card-body">
+        <h3 class="card-title">@CardViewModel.Country</h3>
+        <img src="@($"data:image/png;base64,{CardViewModel.FlagBase64}")" alt="@CardViewModel.Country flag" />
+    </div>
 </div>
 
 @code {
