--- a/GeoMastery.BlazorWASM/Pages/Capitals.razor
+++ b/GeoMastery.BlazorWASM/Pages/Capitals.razor
@@ -1,23 +1,23 @@
 ﻿@page "/capitals"
 
-@using GeoMastery.BlazorWASM.ViewModels
+@using GeoMastery.BlazorWASM.Dto
 @using GeoMastery.Domain.Models
 @inject HttpClient Http
 
 <PageTitle>Capitals of the World</PageTitle>
 
 <h3>Capitals</h3>
-@foreach(CapitalViewModel capital in capitals)
+@foreach(CountryCapitalJsonDto capital in capitals)
 {
     <p>@capital.Country - @capital.Capital</p>
 }
 
 @code {
-    private List<CapitalViewModel> capitals = new List<CapitalViewModel>();
+    private List<CountryCapitalJsonDto> capitals = new List<CountryCapitalJsonDto>();
 
     protected override async Task OnInitializedAsync()
     {
-        var capitalArray = await Http.GetFromJsonAsync<CapitalViewModel[]>("sample-data/capitals.json");
-        capitals = capitalArray.ToList<CapitalViewModel>();
+        var capitalArray = await Http.GetFromJsonAsync<CountryCapitalJsonDto[]>("sample-data/capitals.json");
+        capitals = capitalArray.ToList<CountryCapitalJsonDto>();
     }
 }
