added logging for debugging, added dependency SqliteWasmHelper to allow sqlite to run in browser environment

--- a/GeoMastery.BlazorWASM/Pages/Capitals.razor
+++ b/GeoMastery.BlazorWASM/Pages/Capitals.razor
@@ -1,6 +1,6 @@
 ﻿@page "/capitals"
 
-@using GeoMastery.BlazorWASM.Dto
+@using GeoMastery.BlazorWASM.Data.Dto
 @using GeoMastery.Domain.Models
 @inject HttpClient Http
 
