--- a/GeoMastery.BlazorWASM/Pages/Regions.razor
+++ b/GeoMastery.BlazorWASM/Pages/Regions.razor
@@ -3,9 +3,10 @@
 @using GeoMastery.BlazorWASM.Config
 @using GeoMastery.CountriesAPI.Contracts.Dto.v1
 @using Microsoft.Extensions.Options
+@using Microsoft.Extensions.Configuration
+@inject IConfiguration Configuration
 
 @inject HttpClient Http
-@inject IOptions<ApiConfig> ApiConfigOptions
 
 <h3>Regions</h3>
 
@@ -23,7 +24,7 @@
     {
         try
         {
-            var apiUrl = ApiConfigOptions.Value.CountriesApiBaseUrl;
+            var apiUrl = Configuration["CountriesApi:BaseUrl"];
             var requestEndpoint = $"{apiUrl}Region";
             regions = await Http.GetFromJsonAsync<List<RegionDto>>(apiUrl) ?? throw new NullReferenceException();
         }
