--- a/GeoMastery.BlazorWASM/Shared/NavMenu.razor
+++ b/GeoMastery.BlazorWASM/Shared/NavMenu.razor
@@ -15,8 +15,8 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="capitals">
-                <span class="oi oi-home" aria-hidden="true"></span> Capitals
+            <NavLink class="nav-link" href="regions">
+                <span class="oi oi-home" aria-hidden="true"></span> Regions
             </NavLink>
         </div>
         <div class="nav-item px-3">
