add link in nav

--- a/GeoMastery.BlazorWASM/Shared/NavMenu.razor
+++ b/GeoMastery.BlazorWASM/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="continents">
+                <span class="oi oi-globe" aria-hidden="true"></span> Continents
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="flags">
                 <span class="oi oi-plus" aria-hidden="true"></span> Flags of the World
             </NavLink>
