implement region card + vm & fix nullable warnings for card components

--- a/GeoMastery.BlazorWASM/Shared/ContinentCard/ContinentCard.razor
+++ b/GeoMastery.BlazorWASM/Shared/ContinentCard/ContinentCard.razor
@@ -12,6 +12,6 @@
 </div>
 
 @code {
-    [Parameter]
-    public ContinentCardViewModel ContinentCardVM { get; set; }
+    [Parameter, EditorRequired]
+    public ContinentCardViewModel ContinentCardVM { get; set; } = default!;
 }
