--- a/GeoMastery.BlazorWASM/Shared/CountryFlagCard/CountryFlagCard.razor
+++ b/GeoMastery.BlazorWASM/Shared/CountryFlagCard/CountryFlagCard.razor
@@ -8,8 +8,8 @@
 </div>
 
 @code {
-    [Parameter]
-    public CountryFlagCardViewModel CardViewModel { get; set; }
+    [Parameter, EditorRequired]
+    public CountryFlagCardViewModel CardViewModel { get; set; } = default!;
 
 
 }
