--- a/GeoMastery.BlazorWASM/Pages/Region.razor
+++ b/GeoMastery.BlazorWASM/Pages/Region.razor
@@ -7,19 +7,25 @@
 @inject IConfiguration Configuration
 @inject HttpClient Http
 
-<h3>@PageModel.Name</h3>
+<h3>@Slug</h3>
+<ul>
+    @foreach(var country in countries)
+    {
+        <li>@country.Country</li>
+    }
+</ul>
 
 @code {
     [Parameter, EditorRequired]
     public string Slug { get; set; } = default!;
-    public RegionPageModel PageModel { get; set; } = default!;
+    public RegionDto RegionDto { get; set; } = default!; // todo: must implement get region by slug method
     public List<CountryDto> countries { get; set; } = new List<CountryDto>();
 
     protected override async Task OnInitializedAsync()
     {
         try
         {
-            var regionSlug = PageModel.Slug;
+            var regionSlug = Slug;
             var baseUrl = Configuration["CountriesApi:BaseUrl"];
             var countriesUri = $"{baseUrl}Country/by-region/{regionSlug}";
             countries = await Http.GetFromJsonAsync<List<CountryDto>>(countriesUri) ?? throw new NullReferenceException();
