add region cards to region list page

--- a/GeoMastery.BlazorWASM/Pages/Continents.razor
+++ b/GeoMastery.BlazorWASM/Pages/Continents.razor
@@ -1,8 +1,8 @@
 ﻿@page "/continents"
 
+@using GeoMastery.BlazorWASM.Extensions
 @using GeoMastery.BlazorWASM.Shared.ContinentCard
 @using GeoMastery.CountriesAPI.Contracts.Dto.v1
-@using GeoMastery.CountriesAPI.Extensions.v1
 @using Microsoft.Extensions.Options
 @using Microsoft.Extensions.Configuration
 
