pluralize links in cards

--- a/GeoMastery.BlazorWASM/Shared/ContinentCard/ContinentCard.razor
+++ b/GeoMastery.BlazorWASM/Shared/ContinentCard/ContinentCard.razor
@@ -4,7 +4,7 @@
 <div class="card">
     <div class="card-header">
         <h3 class="card-title">
-            <NavLink class="nav-link" href="@($"/continent/{ContinentCardVM.Slug}")" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="@($"/continents/{ContinentCardVM.Slug}")" Match="NavLinkMatch.All">
                 @ContinentCardVM.Name
             </NavLink>
         </h3>
