--- a/GeoMastery.BlazorWASM/Shared/RegionCard/RegionCard.razor
+++ b/GeoMastery.BlazorWASM/Shared/RegionCard/RegionCard.razor
@@ -4,7 +4,7 @@
 <div class="card">
     <div class="card-header">
         <h3 class="card-title">
-            <NavLink class="nav-link" href="@($"/region/{RegionCardVM.Slug}")" Match="NavLinkMatch.All">
+            <NavLink class="nav-link" href="@($"/regions/{RegionCardVM.Slug}")" Match="NavLinkMatch.All">
                 @RegionCardVM.Name
             </NavLink>
         </h3>
